--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,6 +15,16 @@ number = {4},
 pages = {486--489},
 year = {1982},
 }
+
+@article{pancreas,
+title="{In Silico Preclinical Trials: A Proof of Concept in Closed-Loop Control of Type 1 Diabetes}",
+author="{oris P. Kovatchev and Marc Breton and Chiara Dalla Man and Claudio Cobelli}",
+journal={Journal of Diabetes Science and Technology},
+volume={3},
+issue={1},
+year={2009}
+
+}
 @article {Brain_sti,
 author = {Coffey, Robert J.},
 title = {Deep Brain Stimulation Devices: A Brief Technical History and Review},
