--- a/A.tex
+++ b/A.tex
@@ -56,7 +56,7 @@ Software embedded in a medical device, unlike electrical and mechanical componen
 According to the US Food and Drug Administration, in 1996, 10\% of all medical device recalls were caused by software-related issues (\cite{medstats}). This percentage rose to an average of 15\% of recalls from 2008 to 2012 (\figref{soft_recalls}). Malfunctions of closed-loop medical devices usually have severe consequences, which will be categorized as \emph{Class I}, meaning there is a ``reasonable probability that use of these products will cause serious adverse health consequences or death.'' (\cite{medstats2,pacemakerrecalls,killedbycode}). 
 	
 \section{Regulation Efforts to Ensure Medical Device Safety}
-The United States Food and Drug Administration (FDA) is the primary regulatory authority responsible for assuring the safety, efficacy and security of patients using medical devices. Based on the rationale that 1) manufacturers know their devices better than the regulator, and 2) the variety of medical devices requires a variety of approaches, the device manufacturers are responsibility to demonstrate the safety and efficacy of the medical devices. Manufacturers are required to complete pre-market submission before the devices can be released to the market. The level of requirements for the submission is determined by the safety classification of the devices. A set of general guidelines are recommended by the FDA (\cite{fda1, fda2, fda3}) which list the activities that need to be performed to ensure device safety. 
+The medical device industry is a regulated one to ensure the safety of the patients. The United States Food and Drug Administration (FDA) is the primary regulatory authority responsible for assuring the safety, efficacy and security of patients using medical devices. Based on the rationale that 1) manufacturers know their devices better than the regulator, and 2) the variety of medical devices requires a variety of approaches, the device manufacturers are responsibility to demonstrate the safety and efficacy of the medical devices. Manufacturers are required to complete pre-market submission before the devices can be released to the market. The level of requirements for the submission is determined by the safety classification of the devices. A set of general guidelines are recommended by the FDA (\cite{fda1, fda2, fda3}) which list the activities that need to be performed to ensure device safety. 
 
 In safety-critical industries such as automotive electronics, avionics and nuclear systems, international standards are enforced for system development, evaluation, manufacturing and post-market changes (\cite{autosar,avsi}). This awareness is only beginning to enter the medical device industry as compliance with international standards are "recommended" in the aforementioned guidelines (\cite{formal_fda}). The basic rationale behind these standards is that: if all the risks/hazards of the device are identified and reasonably mitigated, and the device is developed with rigorous process, the device is reasonably safe. 
 
@@ -69,7 +69,7 @@ Risk management is a core activity throughout the software development life cycl
 		\caption{\small Figure of current medical devices}
 		\label{fig:standards}
 \end{figure}
-
+\subsection{Risk Management}
 Risk management includes risk analysis, risk evaluation and risk control. Fault Tree Analysis (FTA) is a common tool in risk analysis in which hazards of the system are first identified and the possible causes of the hazards are analyzed until the initial faults are reached. \figref{risks}.(a) demonstrate an example fault tree for automobile. The problem for fault tree analysis is that all possible causes are analyzed manually. In closed-loop medical devices, there may exist closed-loop interactions between the device and the patient that can cause certain hazard, but are unknown due to the limited physiological knowledge. \figref{risks}.(b) demonstrate a fault tree for a hazard of implantable pacemaker. There are several causes for undesirable fast ventricular rate. The well-understood cause is the intrinsic ventricular tachycardia (solid line). However, with pacemaker implanted, new mechanisms to cause hazard are introduced into the closed-loop system, as illustrated by the two branches with dotted lines. These two branches were not identified during the initial fault tree analysis, and were only identified after the devices have been released into the market, causing unnecessary adverse effects to the patients \cite{ELT}. Risks identified at this stage are also more costly to fix, increasing the cost for device development. \todo{Related to closed-loop model-checking}
 \begin{figure}[t]
 		\centering
@@ -87,6 +87,8 @@ After the fault tree has been constructed, probabilities for the initial faults 
 \end{figure}
 
 After the risks are evaluated, different activities are required to mitigate the risks according to the risk index. After efforts made to reduce the risks, the risks should be re-evaluated to calculate the residual risk and analyze the risk/benefit. This is part of the risk control process.\todo{related to both the requirement hierarchy and model checking}
+\subsection{Clinical Trials}
+\todo{need some reference on this}Regardless of how rigorous the risk management and the device development process are, the devices have to be able to achieve their design goal on the real patient. Devices that have high risk factors, including the closed-loop medical devices, are required to submit clinical evidence for their safety and efficacy, often in form of clinical trials. In clinical trials the devices are used on carefully-selected group of patients following carefully designed protocols, trying to obtain unambiguous results which can support the safety and/or efficacy of the devices. 
 %Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
 
 %\subsection{Pre-market Submission Process}
@@ -142,9 +144,9 @@ After the risks are evaluated, different activities are required to mitigate the
    %
 %Formal methods have traditionally been used for verification of time-critical and safety-critical embedded systems \cite{form-meth}. Until recently, these methods have not been used for medical device certification. \cite{med-form3} presented the use of Extended Finite State Machines for model checking of a resuscitation device. Formal techniques have also been applied to improve medical device protocols (\cite{med-form2}) and safety (\cite{med-form1}), but the authors either used a simplified patient model or did not model the patient at all. 
 \section{Improve Medical Device Safety with Model-based design}
-Model-based design can potentially help during the risk management process and identify overlooked risks earlier in the development process. Computer models of human physiology have been developed which enable model-based closed-loop evaluations of the closed-loop medical devices. FDA is starting to recognize model simulation as evidance for device safety and effectiveness. \cite{pancreas} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, which significantly reduced cost.
+Conducting clinical trials is very time consuming and expensive and risks found during clinical trials are very expensive to fix. Model-based design can potentially help during the development process and provide extra confidence to the device before conducting clinical trials. Computer models of human physiology have been developed which enable model-based closed-loop evaluations of the closed-loop medical devices. FDA is starting to recognize model simulation results as evidence for device safety and effectiveness. \cite{pancreas} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, which significantly reduced cost.
 
-In this paper we use implantable pacemaker as example to demonstrate how model-based design can help improve the safety and efficacy of the implantable pacemaker. We demonstrate the development process from the perspective of the verification team of device manufacturers, therefore we assume to have full access to the pacemaker software design. The pacemaker software design is referenced from a dual chamber pacemaker from Boston Scientific (\cite{compass}).
+In this paper we use implantable pacemaker as example to demonstrate how model-based design can help improve the safety and efficacy of the implantable pacemaker during software development. We demonstrate the development process from the perspective of the verification team of device manufacturers, therefore we assume to have full access to the pacemaker software design. The pacemaker software design is referenced from a dual chamber pacemaker from Boston Scientific (\cite{compass}).
 
 Our proposed model-driven design (MDD) for closed-loop medical devices begins with developing heart models that can interact with real and modeled pacemakers (\cite{VHM_proc}). With the help of heart models, hazards themselves can be used as requirements directly and identify known and even unknown mechanisms that may trigger the hazards using techniques like model checking.
 
@@ -160,39 +162,33 @@ Next, the models are translated to more detailed models that take into account t
 		  %\vspace{-15pt}
 		\label{fig:modeling_overview}
 \end{figure}
-\section{Contributions}
+
 The focus of this effort is three-fold: (a) We developed an integrated functional (i.e., clinically-relevant) and formal (i.e., timed automata based) Virtual Heart Model  (VHM) (see \figref{heartmodel}) and a pacemaker device model for interactive and clinically relevant test generation.  (b) We provide a set of general and patient condition-specific pacemaker software requirements to ensure the safety of the patient is met under all cases, and (c) We provide a means to test and verify the closed-loop system over a variety of basic operation tests where the heart rate must be maintained, the atrial-ventricle synchrony must be enforced and complex closed-loop tests, where the pacemaker must not initiate tachycardia or perform improperly during lead displacement. With this approach of model-based testing, an executable functional model of the pacemaker is created at an early stage in the development process. This model-based methodology is an early step in addressing the urgent need for pre-market evaluation of medical device design and certification.
+
+
 \section{Terminologies}
-
-\todo{Should this come before or after the contribution section?}
-There are misconceptions of different terminologies. In this paper we use terminologies from General Principles of Software Validation\cite{fda2}
+\todo{Should this come before or after the contribution section? it seems that the contributions have a good continuation from the problems}
+Ensuring the safety of complex medical devices has drawn interest not only from stakeholders like regulators and industries, but also medical professionals and academia. Different communities have different interpretations over certain terminologies, causing misunderstandings. In this paper we adopt the terminologies from the regulation perspective, so that the results we have fit into the regulation framework. Most of the definitions are referred from the FDA guideline document General Principles of Software Validation (\cite{fda2}). Below are several terminologies that we use throughout the paper which worth clarifying.
 \subsection{Requirements vs. Specifications}
-By definition (\cite{fda3}), the requirements of a system specify \textbf{what} the system should achieve and the specifications of a system specify \textbf{how} the system is designed to satisfy the requirements. The two documents represent two stages of the development process. For example, an requirement 
+By the definition of FDA (\cite{fda3}), the requirements of a system specify \textbf{what} the system should achieve and the specifications of a system specify \textbf{how} the system is designed to satisfy the requirements. For example, a requirement for an automobile is "Car should not hit objects". The corresponding specification can be "brake if the speed of the car is $x$ and the distance to the object is $y$". From the example we can see that a car satisfying its specification may not satisfy the requirement. In this paper, we use the word requirement in particular to denote the intended uses of the medical devices to improve physiological conditions.
 
-However, the terminology requirements and specifications are confusing in practice and even used interchangeably. \cite{reqVSspec} 
-
-Conformance to specifications does not imply conformance to requirements. Since requirements are the ultimate criteria, confusion between specifications and requirements can cause safety and/or efficacy concerns.
-
-Separation of environment variables and system variables.
-
-
-\subsection{Verification vs. Validation vs. Testing}
-\cite{fda2}
-Validation:"confirmation by examination and provision of objective evidence that:
+\subsection{Validation vs. Verification vs. Testing}
+As defined in \cite{fda2}, software validation is the confirmation by examination and provision of objective evidence that:
 \begin{enumerate}
 	\item software specifications conform to user needs and intended uses, and that
 	\item the particular requirements implemented through software can be consistently fulfilled
 \end{enumerate}
-
-Software verification provides objective evidence that the design outputs of a particular phase of the software development life cycle meet all of the specified requirements for that phase. 
+The first aspect ensures the device is safe and effective. The second aspect maintains the traceability of requirements throughout the development life cycle.
+Software verification fulfills the second aspect of software validation by "providing objective evidence that the design outputs of a particular phase of the software development life cycle meet all of the specified requirements for that phase. "
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=\textwidth]{figs/validation.pdf}
-		\caption{\cite{Vogel}}
+		\caption{Validation activities during the software development life cycle\cite{Vogel}}
 		\label{fig:validation}
 \end{figure}
+Testing is the techniques that can be used for validation and/or verification. \figref{validation} illustrates the relationship between validation, verification and testing, and different activities during the software development life cycle to ensure the safety and effectiveness of the software.
 \subsection{Closed-loop vs. Open-loop Evaluation}
-Specifications specify input-output relationship. Conformance to specification does not need interpretation of the execution trace. Thus it can be verified using open-loop evaluation.
+In open-loop evaluation, i.e. open-loop testing, input sequences are send to the system and system outputs are compared with expected outputs. In open-loop testing, the system outputs do not affect the inputs afterward. In closed-loop evaluation, the environment of the system is taken into account. System outputs affect the state of the environment and thus affect the input sequences. For closed-loop medical devices,
 
 Closed-loop evaluation does two things. 1) Enforce environmental constraints so that the inputs to the device are relevant. 2) Provide interpretation of execution traces 
 %%Through each of the chapters to follow, we cover different aspects of modeling the physiological system and the device, validating the models, running model checking on the closed-loop system and testing the deterministic systems derived from the abstract models. With the goal of 
