--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,13 +18,21 @@ year = {1982},
 
 @article{pancreas,
 title="{In Silico Preclinical Trials: A Proof of Concept in Closed-Loop Control of Type 1 Diabetes}",
-author="{oris P. Kovatchev and Marc Breton and Chiara Dalla Man and Claudio Cobelli}",
+author="{Boris P. Kovatchev and Marc Breton and Chiara Dalla Man and Claudio Cobelli}",
 journal={Journal of Diabetes Science and Technology},
 volume={3},
 issue={1},
 year={2009}
 
 }
+@INPROCEEDINGS{pancreas_paul, 
+author={Ghorbani, M. and Bogdan, P.}, 
+booktitle={Hardware/Software Codesign and System Synthesis (CODES+ISSS), 2013 International Conference on}, 
+title={A cyber-physical system approach to artificial pancreas design}, 
+year={2013}, 
+pages={1-10}, 
+}
+
 @article {Brain_sti,
 author = {Coffey, Robert J.},
 title = {Deep Brain Stimulation Devices: A Brief Technical History and Review},
@@ -473,7 +481,44 @@ year={2015}
 	Title = {{Assurance Cases in Model-Driven Development of the Pacemaker Software}},
 	Volume = {6416},
 	Year = {2010}}
-
+@article {natalia,
+author = {Trayanova, Natalia A. and Boyle, Patrick M.},
+title = {Advances in modeling ventricular arrhythmias: from mechanisms to the clinic},
+journal = {Wiley Interdisciplinary Reviews: Systems Biology and Medicine},
+volume = {6},
+number = {2},
+publisher = {John Wiley & Sons, Inc.},
+pages = {209--224},
+year = {2014},
+}
+@article{bloodflow,
+ author = {Peskin, C. S. and McQueen, D. M.},
+ title = {A Three-dimensional Computational Method for Blood Flow in the Heart. 1. Immersed Elastic Fibers in a Viscous Incompressible Fluid},
+ journal = {J. Comput. Phys.},
+ issue_date = {April 1989},
+ volume = {81},
+ number = {2},
+ year = {1989},
+ pages = {372--405},
+} 
+@article{fiber,
+author="{EW Hsu and CS Henriquez}",
+title="{Myocardial fiber orientation mapping using reduced-encoding diffusion tensor imaging}",
+journal={J Cardiovascular Magn Reson},
+year={2011},
+volume={3},
+number={4},
+pages={339-347}
+}
+@article{marta,
+title = "Quantitative verification of implantable cardiac pacemakers over hybrid heart models ",
+journal = "Information and Computation ",
+volume = "236",
+number = "0",
+pages = "87 - 101",
+year = "2014",
+author = "Taolue Chen and Marco Diciolla and Marta Kwiatkowska and Alexandru Mereacre",
+}
 @article{testing_imd,
 	Author = {J. M. Cortner},
 	Journal = {Global Healthcare Medical Device Manufacturing Technology},
@@ -555,7 +600,43 @@ year={2015}
 	Title = {{A Computer Model of Normal Conduction in the Human Atria}},
 	Volume = {87},
 	Year = {2000}}
-
+@ARTICLE{Grosu_wave, 
+author={Murthy, A. and Bartocci, E. and Fenton, F.H. and Glimm, J. and Gray, R.A. and Cherry, E.M. and Smolka, S.A. and Grosu, R.}, 
+journal={Computational Biology and Bioinformatics, IEEE/ACM Transactions on}, 
+title={Curvature Analysis of Cardiac Excitation Wavefronts}, 
+year={2013}, 
+volume={10}, 
+number={2}, 
+pages={323-336}, 
+}
+@inproceedings{Grosu_abstract,
+ author = {Islam, Md. Ariful and Murthy, Abhishek and Girard, Antoine and Smolka, Scott A. and Grosu, Radu},
+ title = {Compositionality Results for Cardiac Cell Dynamics},
+ booktitle = {Proceedings of the 17th International Conference on Hybrid Systems: Computation and Control},
+ series = {HSCC '14},
+ year = {2014},
+ pages = {243--252},
+} 
+@article{cellular,
+year={2008},
+journal={Annals of Biomedical Engineering},
+volume={36},
+number={1},
+title={Electrophysiological Modeling of Fibroblasts and their Interaction with Myocytes},
+publisher={Springer US},
+author={Sachse, FrankB. and Moreno, AlonsoP. and Abildskov, J. A.},
+pages={41-56},
+}
+@incollection{Grosu_MHA,
+year={2011},
+booktitle={Computer Aided Verification},
+volume={6806},
+series={Lecture Notes in Computer Science},
+title={From Cardiac Cells to Genetic Regulatory Networks},
+publisher={Springer Berlin Heidelberg},
+author={Grosu, Radu and Batt, Gregory and Fenton, FlavioH. and Glimm, James and Le Guernic, Colas and Smolka, ScottA. and Bartocci, Ezio},
+pages={396-411},
+}
 @article{med4,
 	Author = {D. R. Adam},
 	Journal = {IEEE Transactions on Biomedical Engineering},
