--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,6 +15,15 @@ number = {4},
 pages = {486--489},
 year = {1982},
 }
+@article {eletro_mechanical,
+author = {Rossi, Simone and Ruiz-Baier, Ricardo and Pavarino, Luca F. and Quarteroni, Alfio},
+title = {Active strain and activation models in cardiac electromechanics},
+journal = {PAMM},
+volume = {11},
+number = {1},
+pages = {119--120},
+year = {2011},
+}
 
 @article{pancreas,
 title="{In Silico Preclinical Trials: A Proof of Concept in Closed-Loop Control of Type 1 Diabetes}",
