Chapter 2 almost done

--- a/E.tex
+++ b/E.tex
@@ -111,6 +111,7 @@ In each component two copies for both modes are modeled, and switch between each
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Closed-loop Model Checking}
+\label{ModelChecking}
 There are two categories of device bugs: 
 1) the device may fail to conform to its \emph{specifications}, that is, the prescription of how it should react to certain inputs.  
 2) the device may fail to improve the conditions of the patient as promised, even if it conforms to its specifications. 
